[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/textures/icons/hourglass.png" type="Texture" id=1]
[ext_resource path="res://src/interfaces/Fields/child/TimeField.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/interfaces/Fields/child/SeasonsField.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/interfaces/Form/Form.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/interfaces/Fields/child/InputField.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/interfaces/Fields/child/TextField.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/interfaces/Fields/child/SelectField.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/interfaces/Fields/child/CheckField.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/interfaces/Fields/unique/IngredientsField.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/interfaces/Fields/child/ImageField.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/interfaces/CustomButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/interfaces/Pages/CustomPopup.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/interfaces/Fields/child/NumberField.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/fonts/PT-BoldItalic_16.tres" type="DynamicFont" id=14]
[ext_resource path="res://src/interfaces/Pages/CreateRecipe1.gd" type="Script" id=15]

[node name="CreateRecipe" instance=ExtResource( 12 )]
visible = true
margin_right = -1020.0
margin_bottom = -438.0
rect_min_size = Vector2( 900, 650 )
script = ExtResource( 15 )
page_name = "Ajouter une recette "

[node name="MarginContainer" parent="Panel" index="0"]
custom_constants/margin_bottom = 12

[node name="VBoxContainer" parent="Panel/MarginContainer" index="0"]
margin_right = 884.0
margin_bottom = 638.0
custom_constants/separation = 8

[node name="TopBar" parent="Panel/MarginContainer/VBoxContainer" index="0"]
margin_right = 868.0

[node name="Label" parent="Panel/MarginContainer/VBoxContainer/TopBar" index="0"]
margin_top = 6.0
margin_right = 698.0
margin_bottom = 23.0

[node name="Enlarge" parent="Panel/MarginContainer/VBoxContainer/TopBar" index="1"]
margin_left = 704.0
margin_right = 789.0

[node name="Close" parent="Panel/MarginContainer/VBoxContainer/TopBar" index="2"]
margin_left = 795.0
margin_right = 868.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer" index="1"]
margin_top = 38.0
margin_right = 868.0
margin_bottom = 632.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer" index="0"]
margin_right = 868.0
margin_bottom = 218.0
size_flags_horizontal = 3
custom_constants/separation = 28

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" index="0"]
margin_right = 652.0
margin_bottom = 218.0
size_flags_horizontal = 3

[node name="TitleField" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="0" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 652.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
field_id = "title"
title = "Titre de la recette"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="1"]
margin_top = 74.0
margin_right = 652.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 70 )
size_flags_vertical = 3

[node name="CategoriesField" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer" index="0" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 166.0
margin_bottom = 70.0
field_id = "category"
title = "Categorie"
options = [ "Plats", "Desserts", "Petit-dej", "Goûter" ]

[node name="SeasonsField" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 170.0
margin_right = 482.0
margin_bottom = 70.0
field_id = "season"
title = "Saison"

[node name="DietField" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer" index="2" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_right = 652.0
margin_bottom = 70.0
field_id = "diet"
title = "Régime"
options = [ "Poisson", "Viande", "Veggie" ]

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="2"]
margin_top = 148.0
margin_right = 652.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 70 )
size_flags_vertical = 3

[node name="NumberField" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2" index="0" instance=ExtResource( 13 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 160.0
margin_bottom = 70.0
field_id = "portions"
title = "Portions"

[node name="PrepTimeField" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2" index="1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 164.0
margin_right = 324.0
margin_bottom = 70.0
field_id = "prep_time"
title = "Préparation"

[node name="CookTimeField" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2" index="2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 328.0
margin_right = 488.0
margin_bottom = 70.0
field_id = "cook_time"
title = "Cuisson"

[node name="QualityField" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2" index="3" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 492.0
margin_right = 652.0
margin_bottom = 70.0
field_id = "quality"
title = "Quality"
options = [ "Sain", "Lourd" ]

[node name="ImageField" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 680.0
margin_right = 868.0
margin_bottom = 218.0
size_flags_horizontal = 1
field_id = "photo"
title = "Photo"
tooltip_activated = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer" index="1"]
margin_top = 222.0
margin_right = 868.0
margin_bottom = 534.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="IngredientField" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" index="0" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 428.0
margin_bottom = 312.0
size_flags_vertical = 1
field_id = "ingredients"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" index="1"]
margin_left = 440.0
margin_right = 868.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InstructionsField" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer" index="0" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 428.0
margin_bottom = 228.0
field_id = "instructions"
title = "Instructions"
tooltip_activated = true

[node name="NoteField" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer" index="1" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 232.0
margin_right = 428.0
margin_bottom = 312.0
size_flags_stretch_ratio = 0.35
field_id = "notes"
is_required = false
title = "Notes"
tooltip_activated = true
separated_lines = false

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer" index="2"]
margin_top = 538.0
margin_right = 868.0
margin_bottom = 554.0
rect_min_size = Vector2( 0, 16 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer" index="3"]
margin_top = 558.0
margin_right = 868.0
margin_bottom = 594.0
custom_constants/separation = 12

[node name="CheckField" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="0" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 36.0
margin_bottom = 36.0
field_id = "gluten_free"
title = "Sans Gluten"

[node name="CheckField2" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="1" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_right = 84.0
margin_bottom = 36.0
field_id = "milk_free"
title = "Sans Lait"

[node name="CheckField3" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="2" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 96.0
margin_right = 132.0
margin_bottom = 36.0
field_id = "with_sugar"
title = "Contient du sucre"

[node name="Control" type="Control" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="3"]
margin_left = 144.0
margin_right = 480.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="Cancel" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="4" instance=ExtResource( 11 )]
margin_left = 492.0
margin_top = 0.0
margin_right = 620.0
margin_bottom = 36.0
rect_min_size = Vector2( 128, 36 )
text = "Annuler"

[node name="Save" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="5" instance=ExtResource( 11 )]
margin_left = 632.0
margin_top = 0.0
margin_right = 760.0
margin_bottom = 36.0
rect_min_size = Vector2( 128, 36 )
text = "Sauvegarder"

[node name="Publish" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="6" instance=ExtResource( 11 )]
margin_left = 772.0
margin_top = 0.0
margin_right = 868.0
margin_bottom = 36.0
rect_min_size = Vector2( 96, 36 )
text = "Publier"

[node name="Load" type="ColorRect" parent="." index="1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00392157, 0.00392157, 0.00392157, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Load" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HourGlass" type="TextureRect" parent="Load/VBoxContainer" index="0"]
margin_left = 418.0
margin_top = 272.0
margin_right = 482.0
margin_bottom = 336.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Load/VBoxContainer" index="1"]
margin_top = 348.0
margin_right = 900.0
margin_bottom = 378.0
custom_fonts/font = ExtResource( 14 )
align = 1

[node name="Timer" type="Timer" parent="Load" index="1"]
wait_time = 2.0
one_shot = true

[node name="Form" parent="." index="2" instance=ExtResource( 4 )]
fields = [ NodePath("../Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/TitleField"), NodePath("../Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/CategoriesField"), NodePath("../Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/SeasonsField"), NodePath("../Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/DietField"), NodePath("../Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/NumberField"), NodePath("../Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/PrepTimeField"), NodePath("../Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/CookTimeField"), NodePath("../Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/QualityField"), NodePath("../Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/ImageField"), NodePath("../Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/IngredientField"), NodePath("../Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/InstructionsField"), NodePath("../Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/NoteField"), NodePath("../Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/CheckField"), NodePath("../Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/CheckField2"), NodePath("../Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/CheckField3") ]

[connection signal="about_to_show" from="." to="." method="_on_CreateRecipe_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_CreateRecipe_popup_hide"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/Save" to="." method="_on_Save_pressed"]
[connection signal="data_collected" from="Form" to="." method="_on_Form_data_collected"]
